2002-01-04  John David Anglin  <dave.anglin@nrc.ca>

	* config.gcc (hppa*64*-*-hpux11*): Define extra_parts.  Don't use
	collect2.
	* pa-hpux11.h (LDD_SUFFIX, PARSE_LDD_OUTPUT): Undefine.
	(HAS_INIT_SECTION, LD_INIT_SWITCH, LD_FINI_SWITCH): Define.
	* pa64-hpux.h (HP_INIT_ARRAY_SECTION_ASM_OP,
	GNU_INIT_ARRAY_SECTION_ASM_OP, HP_FINI_ARRAY_SECTION_ASM_OP,
	GNU_FINI_ARRAY_SECTION_ASM_OP): Define.
	(CTORS_SECTION_ASM_OP, DTORS_SECTION_ASM_OP): Define when not using
	elfos.h.
	(EH_FRAME_IN_DATA_SECTION): Delete define.
	(HAS_INIT_SECTION, LD_INIT_SWITCH, LD_FINI_SWITCH): Undefine.
	(STARTFILE_SPEC): Use crtbegin.o.
	(ENDFILE_SPEC): Use crtend.o.
	(INIT_SECTION_ASM_OP, FINI_SECTION_ASM_OP, CRT_CALL_STATIC_FUNCTION,
	SUPPORTS_INIT_PRIORITY, PA_CXA_FINALIZE_STUB, PA_INIT_FINI_HACK,
	PA_INIT_FRAME_DUMMY_ASM_OP, PA_JV_REGISTERCLASSES_STUB,
	DTOR_LIST_BEGIN): Define.
	* pa.c (TARGET_ASM_CONSTRUCTOR): Define.
	(pa_asm_out_constructor, pa_asm_out_destructor): New functions.
	* som.h (SUPPORTS_INIT_PRIORITY): Delete define.

2002-12-31  Larin Hennessy  <larin@science.oregonstate.edu>

	* fixinc/fixinc.svr4: Remove references to i860, Sony NewsOS, and spur.
	* fixinc/inclhack.def: Remove tests for Apple A/UX, ARM/RISCiX, DG/UX,
	m88k-*-sysv3*, Sony NewsOS.   Remove references to i860.
	Cleanup handling of replacement text.
	* fixinc/mkfixinc.sh: Remove reference to i?86-*-osf1*

2003-01-04  Bruce Korb  <bkorb@gnu.org>

	* fixinc/tests/base/math.h: removed obsolete results
	* fixinc/tests/base/stdlib.h: ditto
	* fixinc/tests/base/sys/param.h: ditto
	* fixinc/tests/base/sys/stat.h: ditto
	* fixinc/tests/base/time.h: ditto
	* fixinc/tests/base/X11/Intrinsic.h: removed obsolete file
	* fixinc/tests/base/sys/byteorder.h: ditto
	* fixinc/inclhack.def: Remove superfluous backslashes

2003-01-04  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300-protos.h: Add prototypes for
	the new functions defined below.
	* config/h8300/h8300.c (TARGET_ASM_FUNCTION_PROLOGUE): Do not
	define.